--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,34 @@
 version: '2.1'
 
 services:
-  eskill-test-server:
-    image: eskill-test-server
-    build: .
-    environment:
-      NODE_ENV: production
+  # eskill-test-server:
+  #   image: eskill-test-server
+  #   build: .
+  #   environment:
+  #     NODE_ENV: production
+  #   ports:
+  #     - 3000:3000
+  prisma:
+    image: prismagraphql/prisma:1.32
+    restart: always
     ports:
-      - 3000:3000
+      - 4466:4466
+    environment: 
+      PRISMA_CONFIG: |
+        port: 4466
+        databases:
+          default:
+            connector: mongo
+            uri: mongodb://prisma:prisma@mongo
+  mongo:
+    image: mongo:3.6
+    restart: always
+    environment: 
+      MONGO_INITDB_ROOT_USERNAME: prisma
+      MONGO_INITDB_ROOT_PASSWORD: prisma
+    ports: 
+      - 27017:27017
+    volumes: 
+      - mongo:/var/lib/mongo
+volumes: 
+  mongo: ~
