some more updates to prisma

--- a/.babelrc
+++ b/.babelrc
@@ -8,9 +8,9 @@
       {
         "root": ["./"],
         "alias": {
-          "dist": "./dist",
-          "c": "./client",
-          "s": "./server"
+          "prisma": "./server/prisma",
+          "models": "./server/models",
+          "config": "./server/config"
         }
       }
     ]
