--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,16 @@
 version: '3'
 services:
-  # eskill-test-server:
-  #   image: eskill-test-server
-  #   build: .
-  #   environment:
-  #     NODE_ENV: production
-  #   ports:
-  #     - 3000:3000
   prisma:
-    image: prismagraphql/prisma:1.32
+    image: prismagraphql/prisma:1.34
     restart: always
     ports:
-      - '4466:4466'
+    - "4466:4466"
     environment:
       PRISMA_CONFIG: |
         port: 4466
+        # uncomment the next line and provide the env var PRISMA_MANAGEMENT_API_SECRET=my-secret to activate cluster security
+        # managementApiSecret: my-secret
         databases:
           default:
             connector: mongo
-            uri: mongodb://prisma:prisma@mongo
-  mongo:
-    image: mongo:3.6
-    restart: always
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: prisma
-      MONGO_INITDB_ROOT_PASSWORD: prisma
-    ports:
-      - '27017:27017'
-    volumes:
-      - mongo:/var/lib/mongo
-volumes:
-  mongo: ~
+            uri: 'mongodb+srv://root:root@testdb-6kjha.mongodb.net/test'
