--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "apollo-link": "^1.2.11",
     "apollo-server-express": "^2.4.8",
     "babel-plugin-import-graphql": "^2.6.2",
     "babel-plugin-module-resolver": "^3.1.3",
@@ -33,18 +35,37 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "multer-gridfs-storage": "^3.2.3",
+    "parcel-bundler": "^1.12.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "prisma-client-lib": "^1.30.4",
-    "random-number": "^0.0.9"
+    "random-number": "^0.0.9",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "views": "^1.0.2"
   },
   "scripts": {
     "start": "nodemon -w ./server/ -e js,gql -x \" yarn dev-server\"",
     "build": "babel ./server --out-dir bin",
     "dev-server": "babel-node ./server",
-    "production": "npm run build && node bin"
+    "production": "npm run build && node bin",
+    "frontend": "parcel ./frontend/index.html --open"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "@material-ui/core": "^4.0.1",
+    "@material-ui/styles": "^4.0.1",
+    "apollo-boost": "^0.4.0",
+    "apollo-cache-inmemory": "^1.6.0",
+    "apollo-client": "^2.6.0",
+    "apollo-link-context": "^1.0.17",
+    "apollo-link-state": "^0.4.2",
+    "apollo-upload-client": "^10.0.1",
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.18.9",
+    "react-apollo": "^2.5.6",
+    "react-router-dom": "^5.0.0",
+    "rmwc": "^5.5.2",
+    "styled-jsx": "^3.2.1",
+    "styled-jsx-plugin-sass": "^1.0.0"
   }
 }
