--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@material-ui/icons": "^4.0.1",
     "apollo-link": "^1.2.11",
     "apollo-server-express": "^2.4.8",
     "babel-plugin-import-graphql": "^2.6.2",
@@ -40,8 +41,8 @@
     "passport-jwt": "^4.0.0",
     "prisma-client-lib": "^1.30.4",
     "random-number": "^0.0.9",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
     "views": "^1.0.2"
   },
   "scripts": {
@@ -60,10 +61,12 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-state": "^0.4.2",
     "apollo-upload-client": "^10.0.1",
+    "clsx": "^1.0.4",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
     "react-apollo": "^2.5.6",
     "react-router-dom": "^5.0.0",
+    "react-select": "^3.0.3",
     "rmwc": "^5.5.2",
     "styled-jsx": "^3.2.1",
     "styled-jsx-plugin-sass": "^1.0.0"
