--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "import-graphql": "^1.0.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
+    "material-table": "^1.39.0",
     "method-override": "^3.0.0",
     "mongodb": "^3.1.12",
     "mongoose": "^5.4.5",
