--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
     "react-apollo": "^2.5.6",
+    "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.0",
     "react-select": "^3.0.3",
     "rmwc": "^5.5.2",
