--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "apollo-link-state": "^0.4.2",
     "apollo-upload-client": "^10.0.1",
     "clsx": "^1.0.4",
+    "material-ui-upload": "^1.2.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
     "react-apollo": "^2.5.6",
