--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
     "react-apollo": "^2.5.6",
+    "react-latex": "^1.3.1",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.0",
     "react-select": "^3.0.3",
