--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "eskill-test-server",
-  "version": "1.0.0",
+  "name": "eskill",
+  "version": "2.0.0-alpha",
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
@@ -14,6 +14,7 @@
     "@babel/preset-stage-0": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
     "@material-ui/icons": "^4.0.1",
+    "@vx/vx": "^0.0.189",
     "apollo-link": "^1.2.11",
     "apollo-server-express": "^2.4.8",
     "babel-plugin-import-graphql": "^2.6.2",
@@ -67,6 +68,7 @@
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
     "react-apollo": "^2.5.6",
+    "react-circular-progressbar": "^2.0.1",
     "react-latex": "^1.3.1",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.0",
