--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "apollo-link-state": "^0.4.2",
     "apollo-upload-client": "^10.0.1",
     "clsx": "^1.0.4",
+    "csvtojson": "^2.0.10",
     "material-ui-upload": "^1.2.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
