--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,10 @@ services:
           default:
             connector: mongo
             uri: 'mongodb://localhost:27017'
+    networks:
+      - prisma
+
+networks:
+  prisma:
+    driver: host
+
