--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,15 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "targets": {
+          "node": "current" // or '7.10.0'
+        }
+      }
+    ],
+    "@babel/preset-react"
+  ],
   "plugins": [
     ["@babel/plugin-proposal-class-properties"],
     ["@babel/proposal-object-rest-spread", false, "transform-rest-spread"],
