--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "dev-server": "babel-node ./server",
     "production": "npm run build && node bin",
     "frontend": "parcel ./frontend/index.html --open",
-    "fbuild": "parcel build ./frontend/index.html"
+    "fbuild": "parcel build ./frontend/index.html --public-url /eskillnew"
   },
   "devDependencies": {
     "@material-ui/core": "^4.0.2",
