--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   prisma:
+    network_mode: "host"
     image: prismagraphql/prisma:1.34
     restart: always
     ports:
@@ -13,4 +14,10 @@ services:
         databases:
           default:
             connector: mongo
-            uri: 'mongodb+srv://root:root@testdb-6kjha.mongodb.net/test'
+            uri: 'mongodb//localhost:27017'
+  client:
+    network_mode: "host"
+    build: "./frontend"
+  server:
+    network_mode: "host"
+    build: "./server"
