--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,9 @@ services:
             uri: 'mongodb//localhost:27017'
   client:
     network_mode: "host"
-    build: "./client.Dockerfile"
+    build:
+      dockerfile: "./client.Dockerfile"
   server:
     network_mode: "host"
-    build: "./server.Dockerfile"
+    build:
+      dockerfile: "./server.Dockerfile"
