--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,14 @@ services:
         databases:
           default:
             connector: mongo
-            uri: 'mongodb//localhost:27017'
+            uri: 'mongodb://localhost:27017'
   client:
     network_mode: "host"
     build:
+      context: "./"
       dockerfile: "./client.Dockerfile"
   server:
     network_mode: "host"
     build:
+      context: "./"
       dockerfile: "./server.Dockerfile"
