--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,18 @@ services:
     build:
       context: "./"
       dockerfile: "./server.Dockerfile"
+  prisma_dev:
+    network_mode: "host"
+    image: prismagraphql/prisma:1.34
+    restart: always
+    ports:
+    - "4466:4466"
+    environment:
+      PRISMA_CONFIG: |
+        port: 4466
+        # uncomment the next line and provide the env var PRISMA_MANAGEMENT_API_SECRET=my-secret to activate cluster security
+        # managementApiSecret: my-secret
+        databases:
+          default:
+            connector: mongo
+            uri: 'mongodb+srv://root:root@testdb-6kjha.mongodb.net'
