--- a/package.json
+++ b/package.json
@@ -8,44 +8,28 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-stage-0": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
     "@material-ui/icons": "^4.0.1",
     "@vx/vx": "^0.0.189",
-    "apollo-link": "^1.2.11",
     "apollo-server-express": "^2.4.8",
-    "babel-plugin-import-graphql": "^2.6.2",
     "babel-plugin-module-resolver": "^3.1.3",
     "bcrypt-nodejs": "0.0.3",
-    "bluebird": "^3.5.3",
-    "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
     "express": "^4.16.4",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "gridfs-stream": "^1.1.1",
     "http": "^0.0.0",
-    "import-graphql": "^1.0.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "material-table": "^1.39.0",
-    "method-override": "^3.0.0",
     "mongodb": "^3.2.7",
     "mongoose": "^5.4.5",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1",
-    "multer-gridfs-storage": "^3.2.3",
-    "parcel-bundler": "^1.12.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "prisma-client-lib": "^1.30.4",
-    "random-number": "^0.0.9",
-    "react": "^0.14.0 || ^15.0.0 || ^16.0.0",
-    "react-dom": "^16.8.0",
-    "views": "^1.0.2"
+    "serve": "^11.1.0"
   },
   "scripts": {
     "start": "nodemon -w ./server/ -e js,gql -x \" yarn dev-server\"",
@@ -54,7 +38,8 @@
     "production": "npm run build && node bin",
     "frontend": "parcel ./frontend/index.html --open",
     "fbuild": "parcel build ./frontend/index.html --public-url /eskillnew",
-    "prisma": "docker-compose up -d prisma_dev"
+    "prisma": "docker-compose up -d prisma_dev",
+    "serve": "serve -l 6000 -s ./build"
   },
   "devDependencies": {
     "@material-ui/core": "^4.0.2",
@@ -62,22 +47,23 @@
     "apollo-boost": "^0.4.0",
     "apollo-cache-inmemory": "^1.6.0",
     "apollo-client": "^2.6.0",
+    "apollo-link": "^1.2.12",
     "apollo-link-context": "^1.0.17",
     "apollo-link-state": "^0.4.2",
     "apollo-upload-client": "^10.0.1",
     "clsx": "^1.0.4",
     "csvtojson": "^2.0.10",
-    "material-ui-upload": "^1.2.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
+    "parcel-bundler": "^1.12.3",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-circular-progressbar": "^2.0.1",
+    "react-dom": "^16.8.6",
     "react-latex": "^1.3.1",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.0",
-    "react-select": "^3.0.3",
-    "rmwc": "^5.5.2",
-    "styled-jsx": "^3.2.1",
-    "styled-jsx-plugin-sass": "^1.0.0"
+    "react-select": "^3.0.3"
   }
 }
