--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-server-express": "^2.4.8",
     "babel-plugin-module-resolver": "^3.1.3",
     "bcrypt-nodejs": "0.0.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
