--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^3.2.7",
     "mongoose": "^5.4.5",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "prisma-client-lib": "^1.30.4",
