--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@material-ui/core": "^4.0.2",
     "@material-ui/styles": "^4.0.1",
+    "@react-pdf/renderer": "^1.6.7",
     "apollo-boost": "^0.4.0",
     "apollo-cache-inmemory": "^1.6.0",
     "apollo-client": "^2.6.0",
