--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-common": "^3.1.3",
+    "@apollo/react-components": "^3.1.3",
+    "@apollo/react-hoc": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
@@ -33,6 +36,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "prisma-client-lib": "^1.30.4",
+    "recompose": "^0.30.0",
     "serve": "^11.1.0"
   },
   "scripts": {
@@ -64,7 +68,6 @@
     "parcel-bundler": "^1.12.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.6",
     "react-circular-progressbar": "^2.0.1",
     "react-dom": "^16.8.6",
     "react-latex": "^1.3.1",
