--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@babel/preset-react": "^7.0.0",
     "@david.kucsai/react-pdf-table": "^0.1.1",
     "@material-ui/icons": "^4.0.1",
+    "@types/react": "^16.8.0",
     "@vx/vx": "^0.0.189",
     "apollo-server-express": "^2.4.8",
+    "apollo-utilities": "^1.3.2",
     "babel-plugin-module-resolver": "^3.1.3",
     "bcrypt-nodejs": "0.0.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "graphql": "^14.2.1",
+    "graphql": "^14.3.1",
     "graphql-tag": "^2.10.1",
     "gridfs-stream": "^1.1.1",
     "http": "^0.0.0",
@@ -56,7 +58,7 @@
     "@react-pdf/renderer": "^1.6.2",
     "apollo-boost": "^0.4.0",
     "apollo-cache-inmemory": "^1.6.0",
-    "apollo-client": "^2.6.0",
+    "apollo-client": "^2.6.4",
     "apollo-link": "^1.2.12",
     "apollo-link-context": "^1.0.17",
     "apollo-link-state": "^0.4.2",
@@ -67,9 +69,9 @@
     "nodemon": "^1.18.9",
     "parcel-bundler": "^1.12.3",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.8.0",
     "react-circular-progressbar": "^2.0.1",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.8.0",
     "react-latex": "^1.3.1",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.0",
