--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3'
+version: "3"
 services:
   prisma:
     network_mode: "host"
     image: prismagraphql/prisma:1.34
     restart: always
     ports:
-    - "4466:4466"
+      - "4466:4466"
     environment:
       PRISMA_CONFIG: |
         port: 4466
@@ -29,13 +29,13 @@ services:
     image: prismagraphql/prisma:1.34
     restart: always
     ports:
-    - "4466:4466"
+      - "5566:5566"
     environment:
       PRISMA_CONFIG: |
-        port: 4466
+        port: 5566
         # uncomment the next line and provide the env var PRISMA_MANAGEMENT_API_SECRET=my-secret to activate cluster security
         # managementApiSecret: my-secret
         databases:
-          default:
+          sandbox:
             connector: mongo
-            uri: 'mongodb+srv://root:root@testdb-6kjha.mongodb.net'
+            uri: 'mongodb://localhost:27017'
