--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3"
+version: '3'
 services:
   prisma:
-    network_mode: "host"
+    network_mode: 'host'
     image: prismagraphql/prisma:1.34
     restart: always
     ports:
-      - "4466:4466"
+      - '4466:4466'
     environment:
       PRISMA_CONFIG: |
         port: 4466
@@ -16,21 +16,21 @@ services:
             connector: mongo
             uri: 'mongodb://localhost:27017'
   client:
-    network_mode: "host"
+    network_mode: 'host'
     build:
-      context: "./"
-      dockerfile: "./client.Dockerfile"
+      context: './'
+      dockerfile: './client.Dockerfile'
   server:
-    network_mode: "host"
+    network_mode: 'host'
     build:
-      context: "./"
-      dockerfile: "./server.Dockerfile"
+      context: './'
+      dockerfile: './server.Dockerfile'
   prisma_dev:
     image: prismagraphql/prisma:1.34
     restart: always
-    network_mode: "host"
+    network_mode: 'host'
     ports:
-      - "5566:5566"
+      - '5566:5566'
     environment:
       PRISMA_CONFIG: |
         port: 5566
