--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,15 +28,14 @@ services:
   prisma_dev:
     image: prismagraphql/prisma:1.34
     restart: always
-    network_mode: 'host'
     ports:
-      - '5566:5566'
+      - '4466:4466'
     environment:
       PRISMA_CONFIG: |
-        port: 5566
+        port: 4466
         # uncomment the next line and provide the env var PRISMA_MANAGEMENT_API_SECRET=my-secret to activate cluster security
         # managementApiSecret: my-secret
         databases:
-          sandbox:
+          default:
             connector: mongo
-            uri: 'mongodb://localhost:27017'
+            uri: 'mongodb+srv://root:root@testdb-6kjha.mongodb.net'
