--- a/prisma.yml
+++ b/prisma.yml
@@ -1,4 +1,4 @@
-endpoint: https://care.srmist.edu.in/eskill/prisma_dev
+endpoint: http://localhost:4466
 datamodel: datamodel.prisma
 databaseType: document
 
