--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "parcel ./src/index.html --open",
-    "fbuild": "parcel build ./src/index.html --public-url /eskill --no-source-maps",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "serve": "serve -l 6000 -s ./build"
   },
   "devDependencies": {
@@ -39,16 +39,31 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-state": "^0.4.2",
     "apollo-upload-client": "^10.0.1",
+    "customize-cra": "^0.9.1",
+    "customize-cra-react-refresh": "^1.0.1",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
-    "parcel-bundler": "^1.12.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.0",
+    "react-app-rewired": "^2.1.6",
     "react-circular-progressbar": "^2.0.1",
     "react-dom": "^16.8.0",
     "react-latex": "^1.3.1",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.0",
+    "react-scripts": "^3.4.1",
     "react-select": "^3.0.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
