register defaulting to faculty fixed

--- a/.babelrc
+++ b/.babelrc
@@ -11,18 +11,7 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    ["@babel/plugin-proposal-class-properties"],
-    ["@babel/proposal-object-rest-spread", false, "transform-rest-spread"],
-    [
-      "module-resolver",
-      {
-        "root": ["./"],
-        "alias": {
-          "prisma": "./server/prisma",
-          "models": "./server/models",
-          "config": "./server/config"
-        }
-      }
-    ]
+    ["@babel/plugin-proposal-class-properties", false, "class-props"],
+    ["@babel/proposal-object-rest-spread", false, "transform-rest-spread"]
   ]
 }
