--- a/package.json
+++ b/package.json
@@ -78,5 +78,10 @@
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.0",
     "react-select": "^3.0.3"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ]
 }
