--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
     build:
       context: './'
       dockerfile: './client.Dockerfile'
+    environment:
+      REACT_APP_API_ENDPOINT: $API_ENDPOINT
   server:
     network_mode: 'host'
     build:
