--- a/package.json
+++ b/package.json
@@ -4,43 +4,43 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@apollo/react-common": "^3.1.3",
-    "@apollo/react-components": "^3.1.3",
-    "@apollo/react-hoc": "^3.1.3",
-    "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-common": "3.1.3",
+    "@apollo/react-components": "3.1.3",
+    "@apollo/react-hoc": "3.1.3",
+    "@apollo/react-hooks": "3.1.3",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "@david.kucsai/react-pdf-table": "^0.1.1",
-    "@material-ui/icons": "^4.0.1",
-    "@material-ui/lab": "^4.0.0-alpha.39",
-    "@types/react": "^16.8.0",
-    "@vx/vx": "^0.0.189",
-    "apollo-server-express": "^2.4.8",
-    "apollo-utilities": "^1.3.2",
-    "babel-plugin-module-resolver": "^3.1.3",
+    "@david.kucsai/react-pdf-table": "0.1.1",
+    "@material-ui/icons": "4.0.1",
+    "@material-ui/lab": "4.0.0-alpha.39",
+    "@types/react": "16.8.0",
+    "@vx/vx": "0.0.189",
+    "apollo-server-express": "2.4.8",
+    "apollo-utilities": "1.3.2",
+    "babel-plugin-module-resolver": "3.1.3",
     "bcrypt-nodejs": "0.0.3",
-    "cors": "^2.8.5",
-    "express": "^4.16.4",
-    "graphql": "^14.3.1",
-    "graphql-tag": "^2.10.1",
-    "gridfs-stream": "^1.1.1",
-    "http": "^0.0.0",
-    "jsonwebtoken": "^8.4.0",
-    "lodash": "^4.17.11",
-    "material-table": "^1.39.0",
-    "mongodb": "^3.2.7",
-    "mongoose": "^5.4.5",
-    "morgan": "^1.9.1",
-    "nodemailer": "^6.3.0",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "prisma-client-lib": "^1.30.4",
-    "recompose": "^0.30.0",
-    "serve": "^11.1.0"
+    "cors": "2.8.5",
+    "express": "4.16.4",
+    "graphql": "14.3.1",
+    "graphql-tag": "2.10.1",
+    "gridfs-stream": "1.1.1",
+    "http": "0.0.0",
+    "jsonwebtoken": "8.4.0",
+    "lodash": "4.17.11",
+    "material-table": "1.39.0",
+    "mongodb": "3.2.7",
+    "mongoose": "5.4.5",
+    "morgan": "1.9.1",
+    "nodemailer": "6.3.0",
+    "passport": "0.4.0",
+    "passport-jwt": "4.0.0",
+    "prisma-client-lib": "1.30.4",
+    "recompose": "0.30.0",
+    "serve": "11.1.0"
   },
   "scripts": {
     "start": "nodemon -w ./server/ -e js,gql -x \" yarn dev-server\"",
@@ -54,30 +54,31 @@
     "prisma_server": "prisma deploy --force"
   },
   "devDependencies": {
-    "@material-ui/core": "^4.0.2",
-    "@material-ui/styles": "^4.0.1",
-    "@react-pdf/renderer": "^1.6.2",
-    "apollo-boost": "^0.4.0",
-    "apollo-cache-inmemory": "^1.6.0",
-    "apollo-client": "^2.6.4",
-    "apollo-link": "^1.2.12",
-    "apollo-link-context": "^1.0.17",
-    "apollo-link-state": "^0.4.2",
-    "apollo-upload-client": "^10.0.1",
-    "async": "^3.1.0",
-    "clsx": "^1.0.4",
-    "csvtojson": "^2.0.10",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.18.9",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+    "@material-ui/core": "4.0.2",
+    "@material-ui/styles": "4.0.1",
+    "@react-pdf/renderer": "1.6.2",
+    "apollo-boost": "0.4.0",
+    "apollo-cache-inmemory": "1.6.0",
+    "apollo-client": "2.6.4",
+    "apollo-link": "1.2.12",
+    "apollo-link-context": "1.0.17",
+    "apollo-link-state": "0.4.2",
+    "apollo-upload-client": "10.0.1",
+    "async": "3.1.0",
+    "clsx": "1.0.4",
+    "csvtojson": "2.0.10",
+    "node-sass": "4.12.0",
+    "nodemon": "1.18.9",
     "parcel-bundler": "^1.12.3",
-    "prop-types": "^15.7.2",
+    "prop-types": "15.7.2",
     "react": "^16.8.0",
-    "react-circular-progressbar": "^2.0.1",
+    "react-circular-progressbar": "2.0.1",
     "react-dom": "^16.8.0",
-    "react-latex": "^1.3.1",
-    "react-loader-spinner": "^2.3.0",
-    "react-router-dom": "^5.0.0",
-    "react-select": "^3.0.3"
+    "react-latex": "1.3.1",
+    "react-loader-spinner": "2.3.0",
+    "react-router-dom": "5.0.0",
+    "react-select": "3.0.3"
   },
   "browserslist": [
     "> 1%",
