--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@apollo/react-common": "3.1.3",
-    "@apollo/react-components": "3.1.3",
-    "@apollo/react-hoc": "3.1.3",
-    "@apollo/react-hooks": "3.1.3",
+    "@apollo/react-common": "^3.1.3",
+    "@apollo/react-components": "^3.1.3",
+    "@apollo/react-hoc": "^3.1.3",
+    "@apollo/react-hooks": "^3.1.3",
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
@@ -77,12 +77,8 @@
     "react-dom": "^16.8.0",
     "react-latex": "1.3.1",
     "react-loader-spinner": "2.3.0",
-    "react-router-dom": "5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-select": "3.0.3"
   },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 10"
-  ]
+  "browserslist": ["> 1%", "last 2 versions", "not ie <= 10"]
 }
